fix xstream link error